--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
-plugins {
-    id 'java'
-}
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
 
 group 'br.com.crisaltmann'
 version '1.0-SNAPSHOT'
@@ -12,5 +12,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.apache.kafka:kafka-clients:0.10.2.0'
+    compile("com.fasterxml.jackson.core:jackson-databind:2.8.8")
 }
