--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ repositories {
 dependencies {
     compile 'org.apache.kafka:kafka-clients:0.10.2.0'
     compile("com.fasterxml.jackson.core:jackson-databind:2.8.8")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.4.0")
 }
